--- a/style.css
+++ b/style.css
@@ -18,3 +18,13 @@ form {
 form * {
   margin: 5px;
 }
+
+.champ {
+	height: 100%;
+	border:1px grey solid;
+	border-radius:5px;
+	background-color:white;
+}
+
+
+
